# atlas-bm

./: .devcontainer.json  .gitignore  CMakeLists.txt  Dockerfile  NOTES.md  README.md  bm_readspeed.sh  bm_size.sh  docker-compose.yml  setup_docker.sh
benchmarks/: bm_compression.cxx  bm_rntuple_column_size.cxx  bm_size.cxx  bm_ttree_vs_rntuple_size.cxx  util.cxx  util.hxx
bm-readspeed/: CMakeLists.txt  bm_readspeed.cxx  extract_metrics.py  plot_bulk.C  plot_overview_per_medium.C  plot_readspeed.C  plot_speedup.C  plot_throughput_ratio.C
bm-size/: CMakeLists.txt  bm_float_vector_size.cxx  bm_index_field_size.cxx  bm_size.cxx  plot_size.C
bm-utils/: make_transparent_plots.sh  plot_util.C  validate_files.C  write_ntuples.C  write_trees.sh
macros/: analysis.C  compression_util.C  convert_ttree_to_rntuple.C  dump_tree_info.C  plot_file_compression.C  plot_size.C  plot_ttree_file_compression.C  plot_ttree_type_compression.C  plot_ttree_type_compression_old.C  plot_util.C  remove_offset_duplicates.C  rntuple_page_options.C  validate_files.C  write_ntuples.C  write_trees.C
misc/: DAOD_PHYS_fields.txt  DAOD_PHYS_storage.txt  count_branchtypes.py
scripts/: recompress_daod.sh
src/: CMakeLists.txt  util.cxx  util.hxx
src/compression/: CMakeLists.txt  bm_compression.sh  bm_compression_factor.cxx  bm_compression_factor_ttree.cxx  gen_ttree.cxx  plot_compression_factor.cxx
util/: size_util.cxx  size_util.hxx
